--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <kotlin.version>1.0.0-beta-1038</kotlin.version>
+        <maven.version>4.0.0</maven.version>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
