--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,40 @@
+---
 dist: trusty
 language: java
-sudo: false
-notifications:
-  email:
-    on_success: never
-    on_failure: change
-cache:
-  directories:
-       - $HOME/.m2
-
-# use operating systems.
-os:
-  - linux
-  
 jdk:
   - openjdk11
-  
+env:
+  - SCRIPT=bin/unit-tests.sh
+  - SCRIPT=bin/run-journey-test-from-ci.sh
+
+sudo: false
+
+addons:
+  apt:
+    packages:
+      - tree
+
+before_install:
+  - rvm install 2.2.5
+  - rvm use 2.2.5
+  - bin/build-jq.sh  # we want jq 1.5 features; not avail through pkg repo.
+
+# https://docs.travis-ci.com/user/customizing-the-build#Skipping-the-Installation-Step
+install: true  # if we don't skip install, ./gradlew assemble is invoked, but this task is not available.
+
+before_script:
+  - export PATH=$TRAVIS_BUILD_DIR/bin:$PATH  # ensure our tools are prefered over included ones.
+
 script:
   - mvn test -f ./pom.xml
+
+# configure caching (https://docs.travis-ci.com/user/languages/java/#Caching)
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+# format from https://docs.travis-ci.com/user/caching/#Enabling-multiple-caching-features
+cache:
+  bundler: true
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
